fix(style): Fix overflow-x on body.

--- a/static/styles/register.css
+++ b/static/styles/register.css
@@ -10,6 +10,7 @@ body {
 	flex-direction: column;
 	height: 100vh;
 	justify-content: center;
+	overflow-x: hidden;
 }
 
 h1 {
