--- a/static/styles/trends.css
+++ b/static/styles/trends.css
@@ -5,7 +5,7 @@
 	height: fit-content;
 	margin: 50px;
 	min-width: 15rem;
-	padding: 5px 15px;
+	padding: 1rem 2rem;
 }
 
 .trends-feed > a {
